# aoc2023

./: .gitignore  Cargo.toml  README.md  benchmarks.txt  justfile
.github/workflows/: ci.yml  stars.yml
day-01/: Cargo.toml
day-01/benches/: benchmarks-criterion.rs  benchmarks.rs
day-01/src/: part1.rs  part2.rs
day-02/: Cargo.toml
day-02/benches/: benchmarks-criterion.rs  benchmarks.rs
day-02/src/: part1.rs  part2.rs
day-03/: Cargo.toml
day-03/benches/: benchmarks-criterion.rs  benchmarks.rs
day-03/data/: puzzle.md
day-03/src/: part1.rs  part2.rs
day-04/: Cargo.toml
day-04/benches/: benchmarks-criterion.rs  benchmarks.rs
day-04/data/: puzzle.md
day-04/src/: part1.rs  part2.rs
day-05/: Cargo.toml
day-05/benches/: benchmarks-criterion.rs  benchmarks.rs
day-05/data/: puzzle.md
day-05/src/: part1.rs  part2.rs
day-06/: Cargo.toml
day-06/benches/: benchmarks-criterion.rs  benchmarks.rs
day-06/data/: puzzle.md
day-06/src/: part1.rs  part2.rs
day-07/: Cargo.toml
day-07/benches/: benchmarks-criterion.rs  benchmarks.rs
day-07/data/: puzzle.md
day-07/src/: part1.rs  part2.rs
day-08/: Cargo.toml
day-08/benches/: benchmarks-criterion.rs  benchmarks.rs
day-08/data/: puzzle.md
day-08/src/: part1.rs  part2.rs
day-09/: Cargo.toml
day-09/benches/: benchmarks-criterion.rs  benchmarks.rs
day-09/data/: puzzle.md
day-09/src/: part1.rs  part2.rs
day-10/: Cargo.toml
day-10/benches/: benchmarks-criterion.rs  benchmarks.rs
day-10/src/: part1.rs  part2.rs
day-11/: Cargo.toml
day-11/benches/: benchmarks-criterion.rs  benchmarks.rs
day-11/data/: puzzle.md
day-11/src/: part1.rs  part2.rs
day-12/: Cargo.toml
day-12/benches/: benchmarks-criterion.rs  benchmarks.rs
day-12/data/: puzzle.md
day-12/src/: part1.rs  part2.rs
day-13/: Cargo.toml
day-13/benches/: benchmarks-criterion.rs  benchmarks.rs
day-13/data/: puzzle.md
day-13/src/: part1.rs  part2.rs
day-14/: Cargo.toml
day-14/benches/: benchmarks-criterion.rs  benchmarks.rs
day-14/data/: puzzle.md
day-14/src/: part1.rs  part2.rs
day-15/: Cargo.toml
day-15/benches/: benchmarks-criterion.rs  benchmarks.rs
day-15/data/: puzzle.md
day-15/src/: part1.rs  part2.rs
day-16/: Cargo.toml
day-16/benches/: benchmarks-criterion.rs  benchmarks.rs
day-16/data/: puzzle.md
day-16/src/: part1.rs  part2.rs
day-17/: Cargo.toml
day-17/benches/: benchmarks-criterion.rs  benchmarks.rs
day-17/data/: puzzle.md
day-17/src/: part1.rs  part2.rs
day-18/: Cargo.toml
day-18/benches/: benchmarks-criterion.rs  benchmarks.rs
day-18/data/: puzzle.md
day-18/src/: part1.rs  part2.rs
day-19/: Cargo.toml
day-19/benches/: benchmarks-criterion.rs  benchmarks.rs
day-19/data/: puzzle.md
day-19/src/: part1.rs  part2.rs
day-20/: Cargo.toml
day-20/benches/: benchmarks-criterion.rs  benchmarks.rs
day-20/data/: puzzle.md
day-20/src/: part1.rs  part2.rs
day-21/: Cargo.toml
day-21/benches/: benchmarks-criterion.rs  benchmarks.rs
day-21/data/: puzzle.md
day-21/src/: part1.rs  part2.rs
day-22/: Cargo.toml
day-22/benches/: benchmarks-criterion.rs  benchmarks.rs
day-22/data/: puzzle.md
day-22/src/: part1.rs  part2.rs
day-23/: Cargo.toml
day-23/benches/: benchmarks-criterion.rs  benchmarks.rs
day-23/data/: puzzle.md
day-23/src/: part1.rs  part2.rs
day-24/: Cargo.toml
day-24/benches/: benchmarks-criterion.rs  benchmarks.rs
day-24/data/: puzzle.md
day-24/src/: part1.rs  part2.rs
day-25/: Cargo.toml
day-25/benches/: benchmarks-criterion.rs  benchmarks.rs
day-25/data/: puzzle.md
day-25/src/: part1.rs
helpers/src/: lib.rs
template/: Cargo.toml
template/benches/: benchmarks-criterion.rs  benchmarks.rs
template/src/: part1.rs
