[workspace]
resolver = "2"

members = ["day-*"]
default-members = ["day-*"]

[workspace.dependencies]
itertools = "0.12.0"
nom = "7.1.3"
rayon = "1.8.0"
divan = "0.1.5"
regex = "1.10.2"
roots = "0.0.8"
num = "0.4.1"
grid = "0.12.0"
indicatif = "0.17.7"
criterion = { version = "0.5.1", features = ["html_reports"] }
