[workspace]
resolver = "2"

members = ["day-*", "helpers"]
default-members = ["day-*"]

[workspace.dependencies]
itertools = "0.12.0"
nom = "7.1.3"
rayon = "1.8.0"
divan = "0.1.7"
regex = "1.10.2"
roots = "0.0.8"
num = "0.4.1"
grid = "0.13.0"
indicatif = "0.17.7"
cached = "0.46.1"
indexmap = "2.1.0"
pathfinding = "4.6.0"
glam = "0.25.0"
helpers = { path = "helpers" }
criterion = { version = "0.5.1", features = ["html_reports"] }
