[package]
name = "day-03"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools.workspace = true
nom.workspace = true
regex.workspace = true

[dev-dependencies]
criterion.workspace = true
divan.workspace = true

[[bench]]
name = "day-03-bench"
path = "benches/benchmarks.rs"
harness = false

[[bench]]
name = "day-03-bench-criterion"
path = "benches/benchmarks-criterion.rs"
bench = false
harness = false
