[package]
name = "day-07"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools.workspace = true
nom.workspace = true

[dev-dependencies]
criterion.workspace = true
divan.workspace = true

[[bench]]
name = "day-07-bench"
path = "benches/benchmarks.rs"
harness = false

[[bench]]
name = "day-07-bench-criterion"
path = "benches/benchmarks-criterion.rs"
bench = false
harness = false
