[package]
name = "day-24"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools.workspace = true
nom.workspace = true
helpers.workspace = true
glam.workspace = true
z3.workspace = true

[dev-dependencies]
criterion.workspace = true
divan.workspace = true

[[bench]]
name = "day-24-bench"
path = "benches/benchmarks.rs"
harness = false

[[bench]]
name = "day-24-bench-criterion"
path = "benches/benchmarks-criterion.rs"
bench = false
harness = false
