[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools.workspace = true
nom.workspace = true

[dev-dependencies]
criterion.workspace = true
divan.workspace = true

[[bench]]
name = "{{project-name}}-bench"
path = "benches/benchmarks.rs"
harness = false

[[bench]]
name = "{{project-name}}-bench-criterion"
path = "benches/benchmarks-criterion.rs"
bench = false
harness = false
